# unix_dev_2020

02_BuildEnv/: hello_world.c
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  fun.c  outlib.h  prog.c
05_Environmental_1/: CMakeLists.txt  main.c
06_Debugging/: CMakeLists.txt  double_free.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: CMakeLists.txt
08_TestingCoverage/src/: CMakeLists.txt  buf.c  buf.h
08_TestingCoverage/test/: CMakeLists.txt  main.c
09_I18nL10n/: CMakeLists.txt  main.c  main.pot  ru.po
11_Toolkits/: Makefile  main.c
